crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__block__empty.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/block/empty.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block)
   (if
      true
      (block)
      ∅)
   (if
      false
      (block)
      (block))
   (print "ok"))

----- stderr -----
