crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__block__scope.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/block/scope.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "outer")
   (block
      (var a (local @4) "inner")
      (print (local a @4)))
   (print (global a @3)))

----- stderr -----
